alterações css e html e adição de uma imagem

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         </div>
 
     </header>
-<p>Biografia</p>
+<main>
+    <section class="hero">
+        <h3>Biografia</h3>
+
+        <div>
+    
+        </div>
+    </section>
+
+</main>
 </body>
 </html>
